<resources>
    <string name="app_name">星享</string>
    <string name="confirm_exit_app">再按一次退出%s</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">请稍后...</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="no_register">还没有账户</string>
    <string name="had_account">已有账户</string>
    <string name="register">现在注册</string>
    <string name="loging">现在登录</string>
    <string name="other_login">第三方登录</string>
    <string name="wei_xin_login">微信登录</string>
    <string name="title_welcome_1">星享，</string>
    <string name="title_welcome_2">你与明星零距离</string>
    <string name="news_info_title">资讯</string>
    <string name="sample_heard_layout">头布局</string>
    <string name="get_note_code">获取验证码</string>
    <string name="regiset_put_note_code">输入系统验证码</string>
    <string name="put_account_number">请输入账号</string>
    <string name="put_password_number">请输入6位以上密码</string>
    <string name="regiset_phone_number">输入您的手机号</string>
    <string name="retrieve_password_1">忘记密码？</string>
    <string name="retrieve_password_2">点击找回</string>
    <string name="butten_register">注册</string>
    <string name="butten_loging">登录</string>
    <string name="butten_reset_psd">重置登录密码</string>
    <string name="again_reset_psd">重新输入登录密码</string>
    <string name="check_famous_address_book">查看名人通讯录</string>
    <string name="famous_address_book">名人通讯录</string>
    <string name="diff_answer">星聊</string>
    <string name="ming_xing">明星</string>
    <string name="number_80004">8004</string>
    <string name="search_hint">搜索发行人代码或名称</string>
    <string name="search_star_result_1">(</string>
    <string name="search_star_result_2">)</string>
    <string name="option">自选</string>
    <string name="user_total_assets">资产总额</string>
    <string name="user_buyed_star">已购明星</string>
    <string name="end_times">距离结束还有</string>
    <string name="star_list">明星列表</string>
    <string name="my_moneybag">我的钱包</string>
    <string name="my_order_star">我关注的明星</string>
    <string name="customer_service">客服中心</string>
    <string name="common_problem">常见问题</string>
    <string name="general_settings">通用设置</string>
    <string name="me_deal_detail">交易明细</string>
    <string name="my_referee">我的推荐人</string>
    <string name="user_info">个人信息</string>
    <string name="user_head_imageview">头像</string>
    <string name="user_phone">手机号码</string>
    <string name="user_pet_name">昵称</string>
    <string name="user_real_name">真实姓名</string>
    <string name="user_card_number">身份证号码</string>
    <string name="star_money">星享币</string>
    <string name="user_asset_manage">资产管理</string>
    <string name="user_have_market_value">持有市值</string>
    <string name="user_acailable_balance">可用余额</string>
    <string name="user_recharge">充值</string>
    <string name="user_fudai">福袋</string>
    <string name="end_bank_number">尾号:%s</string>
    <string name="recharge_money">充值金额</string>
    <string name="input_recharge_money">手动输入充值金额</string>
    <string name="choose_recharge_money">选择充值额度</string>
    <string name="recharge_money1">1元</string>
    <string name="recharge_money2">10元</string>
    <string name="recharge_money3">100元</string>
    <string name="recharge_money4">1000元</string>
    <string name="recharge_money5">10000元</string>
    <string name="recharge_money6">50000元</string>
    <string name="recharge_ali_pay">支付宝支付</string>
    <string name="recharge_wxpay">微信支付</string>
    <string name="app_version_name">星享V:%s</string>
    <string name="money_bag_detail">钱包明细</string>
    <string name="bank_info">银行卡</string>
    <string name="booking_star_list">预约名单</string>
    <string name="have_talk">聊一聊</string>
    <string name="service_center">客服中心</string>
    <string name="service_weixin">客服微信</string>
    <string name="service_wx_number">星享V:%s</string>
    <string name="service_qq_number">客服QQ</string>
    <string name="service_business_cooperation">商务合作</string>
    <string name="setting_deal_rule">买卖规则</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_clear_cache">清空缓存</string>
    <string name="setting_quit_login">退出登录</string>
    <string name="my_setting">设置</string>
    <string name="money_detail_service_charge">手续费</string>
    <string name="money_billing_detail">账单详情</string>
    <string name="money_issuer_info">发行人信息</string>
    <string name="money_setup_time">创建时间</string>
    <string name="money_bank_info">银行信息</string>
    <string name="dialog_title_referee">推荐人</string>
    <string name="dialog_title_referee2">推荐人:%s</string>
    <string name="dialog_input_tip">输入不能为空</string>
    <string name="identity_tip">您还没有身份验证</string>
    <string name="identity_tip_msg">您需要进行身份验证,\n之后才可以进行明星时间交易。</string>
    <string name="start_verification">开始验证</string>
    <string name="input_real_name">请输入您真实姓名</string>
    <string name="input_real_card_number">请输入您的身份证号码</string>
    <string name="complete_verification">完成验证</string>
    <string name="identity_verification">身份验证</string>
    <string name="setting_pwd_tip">为保障您的交易安全，请设置交易密码。</string>
    <string name="setting_next">下一步</string>
    <string name="setting_pay_pwd">设置交易密码</string>
    <string name="setting_pay_pwd2">请确认交易密码</string>
    <string name="disclaimer_title">免责声明</string>
    <string name="disclaimer">\t\t\t\t在使用本系统的所有功能之前，请您务必仔细阅读并透彻理解本声明。
        您可以选择不使用本系统，但如果您使用本系统，您的使用行为将被视为对本声明全部内容的认可。\n\t\t\t\t免责声明： 鉴于本系统使用非人工检索/分析方式，
        无法确定您输入的条件进行是否合法，所以本系统对检索/分析出的结果不承担责任。
        如果因以本系统的检索/分析结果作为任何商业行为或者学术研究的依据而产生不良后果，本系统不承担任何法律责任。
        \n\t\t\t\t关于隐私权： 访问者在本系统注册时提供的一些个人资料，本系统除您本人同意外不会将用户的任何资料以任何方式泄露给第三方。当政府部门、司法机关等依照法定程序要求本系统披露个人资料时，本系统将根据执法单位之要求或为公共安全之目的提供个人资料，在此情况下的披露，本系统不承担任何责任。</string>
    <string name="login_out">退出登录</string>
    <string name="reset_login_pwd">重置登录密码</string>
    <string name="reset_pay_pwd">重置交易密码</string>
    <string name="choose_pay_type">请选择付款方式</string>
    <string name="star_booking">约见</string>
    <string name="star_refuse">已拒绝</string>
    <string name="me_agree">我已同意</string>
    <string name="disclaimer_text">《免责声明》</string>
    <string name="recharge_info">充值方式</string>
    <string name="entrust_hot">委托拍卖榜</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="latest_message_draft_prefix">[草稿] </string>
    <string name="main_msg_unread_msg_count">[%d条]</string>
    <string name="out_time">超时</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="all_market_detail">全部</string>
    <string name="new_price_market_detail_1">最新价</string>
    <string name="new_price_market_detail_2">元/秒</string>
    <string name="price_limit">涨跌幅</string>
    <string name="star_hot">明星热度</string>
    <string name="recommend_star">推荐明星</string>
    <string name="star_price_time_share">￥%s</string>
    <string name="price_total">￥%.2f</string>
    <string name="star_price_time_share_limit">%1$s/%2$s</string>
    <string name="readed">已读</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>
    <string name="version">版本号:</string>
    <string name="account">帐号:</string>
    <string name="chat">聊天</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="network_forbidden_login">你被服务器禁止登录，详询客服</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="kick_out">帐号在其它设备登录</string>
    <string name="edittext_length_tips">你输入的字数已经超过了限制！</string>
    <string name="file_transfer">文件云存储</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="how_to_get_account">如何获取帐号</string>
    <string name="multi_client_management">多端登录管理</string>
    <string name="kick_other_client_prompt">踢掉 %1$s</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2017 网易公司版权所有</string>
    <string name="edit_nick">修改昵称</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="oneself_intro">个人简介</string>
    <string name="oneself_intro_expeience">主要经历</string>
    <string name="oneself_intro_achievement">主要成就</string>
    <string name="intro_nationality">国籍:%s</string>
    <string name="intro_nation">民族:%s</string>
    <string name="intro_work">职业:%s</string>
    <string name="intro_constellation">星座:%s</string>
    <string name="intro_birth_day">出生日期:%s</string>
    <string name="intro_colleage">毕业院校:%s</string>
    <string name="intro_all_time">总时长</string>
    <string name="click_buy">立即求购</string>
    <string name="buy_time">求购时间</string>
    <string name="star_time_intro">简介</string>
    <string name="star_time_fans">粉丝热度榜</string>
    <string name="star_time_auction">拍卖</string>
    <string name="star_time_comment">评论</string>
    <string name="name_and_code">名称/代码</string>
    <string name="price">价格</string>
    <string name="state">类型/状态</string>
    <string name="deal_time">成交时间</string>
    <string name="transaction_price_num">成交价/成交量</string>
    <string name="volume_of_transaction">类型/成交额</string>
    <string name="add_star">加入星享</string>
    <string name="input_member_id">请输入区域总经销ID（会员机构）</string>
    <string name="input_area_broker_id">请输入区域经销ID（区域经纪人）</string>
    <string name="input_broker_id">请输入零售商ID（经纪人）</string>
    <string name="input_id_tips">TIPS：请输入正确的渠道推广号</string>
    <string name="enter_star">进入星享</string>
    <string name="delegation_num">委托量</string>
    <string name="bank_card_user">持卡人</string>
    <string name="bank_card_number">卡号</string>
    <string name="input_card_number">请输入您的卡号</string>
    <string name="input_card_phone">请输入您的预留手机号</string>
    <string name="input_card_code">请输入验证码</string>
    <string name="phone_number_bank">手机号</string>
    <string name="phone_code_bank">验证码</string>
    <string name="bind_bank_card">绑定银行卡</string>
</resources>