<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fafafa"
    android:orientation="vertical">

    <com.cloudTop.starshare.widget.NormalTitleBar
        android:id="@+id/nt_title"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <LinearLayout
        android:id="@+id/ll_setting_deal_rule"
        style="@style/user_info_setting_style"
        android:layout_marginTop="@dimen/dp_21">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/setting_deal_rule" />

        <include layout="@layout/ll_right_arrow" />
    </LinearLayout>

    <include layout="@layout/ll_interval_line" />
    <LinearLayout
        android:id="@+id/ll_law_info"
        style="@style/user_info_setting_style">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/law_info" />

        <include layout="@layout/ll_right_arrow" />

    </LinearLayout>

    <include layout="@layout/ll_interval_line" />
    <LinearLayout
        android:id="@+id/ll_setting_about_us"
        style="@style/user_info_setting_style">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/setting_about_us" />

        <include layout="@layout/ll_right_arrow" />

    </LinearLayout>

    <include layout="@layout/ll_interval_line" />

    <LinearLayout
        android:id="@+id/ll_setting_clear_cache"
        style="@style/user_info_setting_style">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/setting_clear_cache" />

        <TextView
            android:id="@+id/tv_cash_size"
            style="@style/user_setting_hint_style" />

    </LinearLayout>

    <include layout="@layout/ll_interval_line" />

    <LinearLayout
        android:id="@+id/ll_setting_reset_login_pwd"
        style="@style/user_info_setting_style">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/reset_login_pwd" />

        <include layout="@layout/ll_right_arrow" />

    </LinearLayout>

    <include layout="@layout/ll_interval_line" />

    <LinearLayout
        android:id="@+id/ll_setting_reset_pay_pwd"
        style="@style/user_info_setting_style">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/reset_pay_pwd" />

        <include layout="@layout/ll_right_arrow" />

    </LinearLayout>

    <include layout="@layout/ll_interval_line" />

    <LinearLayout
        android:id="@+id/ll_setting_quit_login"
        style="@style/user_info_setting_style">

        <TextView
            style="@style/user_setting_text_style"
            android:text="@string/setting_quit_login" />

        <include layout="@layout/ll_right_arrow" />

    </LinearLayout>

    <include layout="@layout/ll_interval_line" />

</LinearLayout>