<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fafafa"
    android:orientation="vertical">

    <com.cloudTop.starshare.widget.NormalTitleBar
        android:id="@+id/nt_title"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/ly_space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:background="@color/main_bg_color"
                android:orientation="horizontal">

                <TextView
                    style="@style/bank_text_style"
                    android:text="@string/bank_card_user" />

                <EditText
                    android:id="@+id/et_user_name"
                    style="@style/bank_text_style"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请输入持卡人姓名"
                    android:textColorHint="@color/color_cccccc" />

            </LinearLayout>

            <include layout="@layout/layout_item_bottom_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:background="@color/main_bg_color"
                android:orientation="horizontal">

                <TextView
                    style="@style/bank_text_style"
                    android:text="@string/bank_card_number" />

                <EditText
                    android:id="@+id/et_user_cardno"
                    style="@style/bank_text_style"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_card_number"
                    android:textColorHint="@color/color_cccccc" />

            </LinearLayout>

            <include layout="@layout/layout_item_bottom_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:background="@color/main_bg_color"
                android:orientation="horizontal">

                <TextView
                    style="@style/bank_text_style"
                    android:text="@string/phone_number_bank" />

                <EditText
                    android:id="@+id/et_user_phone"
                    style="@style/bank_text_style"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_card_phone"
                    android:textColorHint="@color/color_cccccc" />

            </LinearLayout>

            <include layout="@layout/layout_item_bottom_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:background="@color/main_bg_color"
                android:orientation="horizontal">

                <TextView
                    style="@style/bank_text_style"
                    android:text="@string/phone_code_bank" />

                <EditText
                    android:id="@+id/et_code_msg"
                    style="@style/bank_text_style"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_card_code"
                    android:textColorHint="@color/color_cccccc" />

                <Button
                    android:id="@+id/btn_get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_12"
                    android:background="@drawable/button_bank_message_selected"
                    android:padding="@dimen/dp_15"
                    android:text="@string/get_note_code"
                    android:textColor="@color/color_ffffff" />

            </LinearLayout>

            <include layout="@layout/layout_item_bottom_line" />

            <Button
                android:id="@+id/btn_bind_bank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_50"
                android:background="@drawable/button_bank_message_selected"
                android:text="@string/bind_bank_card"
                android:textColor="@drawable/sel_common_view_text"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>