<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        >
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/font_999999"
            android:textSize="@dimen/fontSize_11sp"
            android:text="@string/name_and_code"
            />
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/font_999999"
            android:textSize="@dimen/fontSize_11sp"
            android:text="@string/delegation_num"
            />
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/font_999999"
            android:textSize="@dimen/fontSize_11sp"
            android:text="@string/price"
            />
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/font_999999"
            android:textSize="@dimen/fontSize_11sp"
            android:text="@string/state"
            />

    </LinearLayout>
    <com.github.jdsjlzx.recyclerview.LRecyclerView
        android:id="@+id/lrv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.github.jdsjlzx.recyclerview.LRecyclerView>
</LinearLayout>