<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_referee"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_referee"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/dp_30"
                android:text="@string/add_star"
                android:textColor="@color/font_333333"
                android:textSize="@dimen/text_size_18" />

            <ImageView
                android:id="@+id/iv_dialog_close"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="right"
                android:src="@drawable/close" />
        </LinearLayout>

        <com.yundian.star.widget.WPEditText
            android:id="@+id/member_id"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="@dimen/dp_30"
            app:edit_hint="@string/input_member_id"
            app:edit_pwd="false"
            app:edit_show_eye="false"
            app:edit_show_icon="false"
            app:edit_show_right_text="false" />

        <com.yundian.star.widget.WPEditText
            android:id="@+id/area_broker_id"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="@dimen/dp_25"
            app:edit_hint="@string/input_area_broker_id"
            app:edit_pwd="true"
            app:edit_show_eye="false"
            app:edit_show_icon="false"
            app:edit_show_right_text="false" />

        <com.yundian.star.widget.WPEditText
            android:id="@+id/broker_id"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="@dimen/dp_25"
            app:edit_hint="@string/input_broker_id"
            app:edit_pwd="true"
            app:edit_show_eye="false"
            app:edit_show_icon="false"
            app:edit_show_right_text="false" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_22"
            android:layout_marginRight="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_25"
            android:lineSpacingExtra="5dp"
            android:text="@string/input_id_tips"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/btn_enter_star"
            style="@style/ButtonLogin"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/enter_star" />

    </LinearLayout>
</LinearLayout>